--- a/oxt/help/help-en.html
+++ b/oxt/help/help-en.html
@@ -24,12 +24,18 @@
 <p><img src="Screenshots/Toolbar00dock-en.png" /></p>
 <h2 id="use-the-toolbar">Use the toolbar</h2>
 <p>There are two buttons: <em>E</em> for emphasize and <strong>S</strong> for strong empühasize.</p>
-<p><img src="Screenshots/Toolbar01-en.png" /></p>
+<h3 id="assign-emphasis-character-style">Assign “Emphasis” character style</h3>
 <ol type="1">
 <li>Mark the text passage you want to emphasize.</li>
-<li>Click the <em>E</em> or the <strong>S</strong> button.</li>
+<li>Click the <em>E</em> button.</li>
 </ol>
-<p><img src="Screenshots/Use-en.png" /></p>
+<p><img src="Screenshots/Emphasize.png" /></p>
+<h3 id="assign-strong-emphasis-character-style">Assign “Strong Emphasis” character style</h3>
+<ol type="1">
+<li>Mark the text passage you want to emphasize.</li>
+<li>Click the <strong>S</strong> button.</li>
+</ol>
+<p><img src="Screenshots/Strong.png" /></p>
 <h2 id="get-help">Get help</h2>
 <p>In the <strong>Help</strong> section of the main menu, there is a <strong>emph help</strong> submenu.</p>
 <p><img src="Screenshots/HelpMenu-en.png" /></p>
