--- a/oxt/help/help-en.html
+++ b/oxt/help/help-en.html
@@ -23,7 +23,7 @@
 <p>You can dock it to a suitable place on the user interface.</p>
 <p><img src="Screenshots/Toolbar00dock-en.png" /></p>
 <h2 id="use-the-toolbar">Use the toolbar</h2>
-<p>There are two buttons: <em>E</em> for emphasize and <strong>S</strong> for strong empühasize.</p>
+<p>There are two buttons: <em>E</em> for emphasize and <strong>S</strong> for strong emphasize.</p>
 <h3 id="assign-emphasis-character-style">Assign “Emphasis” character style</h3>
 <ol type="1">
 <li>Mark the text passage you want to emphasize.</li>
