Prepare development release v1.3.2
Update documentation and help texts

--- a/oxt/help/help-en.html
+++ b/oxt/help/help-en.html
@@ -23,19 +23,40 @@
 <p>You can dock it to a suitable place on the user interface.</p>
 <p><img src="Screenshots/Toolbar00dock-en.png" /></p>
 <h2 id="use-the-toolbar">Use the toolbar</h2>
-<p>There are two buttons: <em>E</em> for emphasize and <strong>S</strong> for strong emphasize.</p>
+<p>There are three buttons: <strong>E</strong> for emphasize and <strong>S</strong> for strong emphasize and <strong>D</strong> for default style.</p>
 <h3 id="assign-emphasis-character-style">Assign “Emphasis” character style</h3>
 <ol type="1">
 <li>Mark the text passage you want to emphasize.</li>
-<li>Click the <em>E</em> button.</li>
+<li>Click on the <strong>E</strong> button.</li>
 </ol>
 <p><img src="Screenshots/Emphasize.png" /></p>
 <h3 id="assign-strong-emphasis-character-style">Assign “Strong Emphasis” character style</h3>
 <ol type="1">
 <li>Mark the text passage you want to emphasize.</li>
-<li>Click the <strong>S</strong> button.</li>
+<li>Click on the <strong>S</strong> button.</li>
 </ol>
 <p><img src="Screenshots/Strong.png" /></p>
+<h3 id="undo-the-assignment">Undo the assignment</h3>
+<ol type="1">
+<li>Mark the text passage you want to de-emphasize.</li>
+<li>Click on the <strong>D</strong> button.</li>
+</ol>
+<p>By default, this function can also be called with the key combination Ctrl-M.</p>
+<p><img src="Screenshots/Default.png" /></p>
+<h3 id="enter-emphasized-text">Enter emphasized text</h3>
+<ol type="1">
+<li>Make sure that nothing is marked.</li>
+<li>Click on the <strong>E</strong> button.</li>
+<li>Type the text you want to emphasize.</li>
+<li>When finished, click on the <strong>D</strong> button (or press Ctrl-M).</li>
+</ol>
+<h3 id="enter-strongly-emphasized-text">Enter strongly emphasized text</h3>
+<ol type="1">
+<li>Make sure that nothing is marked.</li>
+<li>Click on the <strong>S</strong> button.</li>
+<li>Type the text you want to emphasize.</li>
+<li>When finished, click on the <strong>D</strong> button (or press Ctrl-M).</li>
+</ol>
 <h2 id="get-help">Get help</h2>
 <p>In the <strong>Help</strong> section of the main menu, there is a <strong>emph help</strong> submenu.</p>
 <p><img src="Screenshots/HelpMenu-en.png" /></p>
