--- a/oxt/help/help-en.html
+++ b/oxt/help/help-en.html
@@ -41,21 +41,20 @@
 <li>Mark the text passage you want to de-emphasize.</li>
 <li>Click on the <strong>D</strong> button.</li>
 </ol>
-<p>By default, this function can also be called with the key combination Ctrl-M.</p>
 <p><img src="Screenshots/Default.png" /></p>
 <h3 id="enter-emphasized-text">Enter emphasized text</h3>
 <ol type="1">
 <li>Make sure that nothing is marked.</li>
 <li>Click on the <strong>E</strong> button.</li>
 <li>Type the text you want to emphasize.</li>
-<li>When finished, click on the <strong>D</strong> button (or press Ctrl-M).</li>
+<li>When finished, click on the <strong>D</strong> button.</li>
 </ol>
 <h3 id="enter-strongly-emphasized-text">Enter strongly emphasized text</h3>
 <ol type="1">
 <li>Make sure that nothing is marked.</li>
 <li>Click on the <strong>S</strong> button.</li>
 <li>Type the text you want to emphasize.</li>
-<li>When finished, click on the <strong>D</strong> button (or press Ctrl-M).</li>
+<li>When finished, click on the <strong>D</strong> button.</li>
 </ol>
 <h2 id="get-help">Get help</h2>
 <p>In the <strong>Help</strong> section of the main menu, there is a <strong>emph help</strong> submenu.</p>
