Prepare development version 1.5.3
Add Format menu

--- a/oxt/help/help-en.html
+++ b/oxt/help/help-en.html
@@ -56,6 +56,11 @@
 <li>Type the text you want to emphasize.</li>
 <li>When finished, click on the <strong>D</strong> button.</li>
 </ol>
+<h2 id="use-the-menu">Use the menu</h2>
+<p>To assign the appropriate character template to all directly formatted text passages in the document, there are several options in the “emph” menu.</p>
+<p>Optionally, bold and italic can be converted separately.</p>
+<p>Also vice versa, the assignment of character templates is possible for all directly formatted text passages occurring in the document.</p>
+<p><img src="Screenshots/FormatMenu.png" /></p>
 <h2 id="get-help">Get help</h2>
 <p>In the <strong>Help</strong> section of the main menu, there is a <strong>emph help</strong> submenu.</p>
 <p><img src="Screenshots/HelpMenu-en.png" /></p>
