Add LibreOffice variant v1.8.0

--- a/oxt/help/help-en.html
+++ b/oxt/help/help-en.html
@@ -15,7 +15,8 @@
 </head>
 <body>
 <h1>emph Help</h1>
-<p><a href="https://peter88213.github.io/emph/">Project homepage</a></p>
+<p><a href="https://peter88213.github.io/emph/">Project homepage</a> &gt; Instructions for use</p>
+<hr />
 <h2 id="instructions-for-use">Instructions for use</h2>
 <h2 id="place-the-toolbar">Place the toolbar</h2>
 <p>After installing the extension and restarting the office application, you will see a small toolbar.</p>
@@ -24,6 +25,7 @@
 <p><img src="Screenshots/Toolbar00dock-en.png" /></p>
 <h2 id="use-the-toolbar">Use the toolbar</h2>
 <p>There are three buttons: <strong>E</strong> for emphasize and <strong>S</strong> for strong emphasize and <strong>D</strong> for default style.</p>
+<p><strong>Note:</strong> The <strong>D</strong> button is not provided for the LibreOffice variant.</p>
 <h3 id="assign-emphasis-character-style">Assign “Emphasis” character style</h3>
 <ol type="1">
 <li>Mark the text passage you want to emphasize.</li>
@@ -42,19 +44,20 @@
 <li>Click on the <strong>D</strong> button.</li>
 </ol>
 <p><img src="Screenshots/Default.png" /></p>
+<p>Alternatively, you can assign the Default Character Style, which also works with LibreOffice.</p>
 <h3 id="enter-emphasized-text">Enter emphasized text</h3>
 <ol type="1">
 <li>Make sure that nothing is marked.</li>
 <li>Click on the <strong>E</strong> button.</li>
 <li>Type the text you want to emphasize.</li>
-<li>When finished, click on the <strong>D</strong> button.</li>
+<li>When finished, press <strong>Ctrl-M</strong>, or click on the <strong>D</strong> button.</li>
 </ol>
 <h3 id="enter-strongly-emphasized-text">Enter strongly emphasized text</h3>
 <ol type="1">
 <li>Make sure that nothing is marked.</li>
 <li>Click on the <strong>S</strong> button.</li>
 <li>Type the text you want to emphasize.</li>
-<li>When finished, click on the <strong>D</strong> button.</li>
+<li>When finished, press <strong>Ctrl-M</strong>, or click on the <strong>D</strong> button.</li>
 </ol>
 <h2 id="use-the-menu">Use the menu</h2>
 <p>To assign the appropriate character template to all directly formatted text passages in the document, there are several options in the “emph” menu.</p>
